# llm-finetuning-lambda

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
notebooks/: play_with_finetuned_model.ipynb
src/: dataset.py
src/finetune-llm/: constants.py  finetune_lora.py
src/lambda/: commands.py  request.json  requirements_common.txt  requirements_torch.txt
